2002-09-29  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.c (at_bitmap_read): If opts 
	is null, give dummy to a handler.
	(at_input_opts_copy): New function.

	* configure.in: update library version.
	LC_CURRENT=2, LT_REVISION=0, LT_AGE=0.

	* main.c (main): Use new input opts.

	* autotrace.h (at_input_read_func): added a new 
	argrument.
	(at_bitmap_read): added the new argrument.

	* input-*.[ch] (*_load_image): added the new argrument.

	* input-png.c (read_png): Use background in the input option
	if the option is given. Otherwise, use white.
	
	* autotrace.c (at_input_opts_new, at_input_opts_free): 
	New functions.

	* autotrace.h (struct _at_input_opts_type): New 
	data type.

2002-09-29  Martin Weber <martweb@gmx.net>

	* pxl-outline.c: I introduced a bug in pxl-outline.c. 
	change back to the version used in 0.30.5.

	Message-ID: <3D96120F.2780C779@gmx.net>.
	
2002-09-28  Masatake YAMATO  <yamato@redhat.com>

	* input-png.c (read_png): New function that can
	handle transparent region (just fill with white). 
	(load_image): use read_png.

2002-09-27  Martin Weber <martweb@gmx.net>

	* pxl-outline.c (find_centerline_pixels): During speed up 
	the code I introduced a bug. Here the fix. 

	Message-ID: <3D94C2E7.55A7C0C3@gmx.net>.

2002-09-26  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.m4 ($LIBS): changed the order of appending
	$LIBS to $AUTOTRACE_LIBS.

	* Makefile.am (EXTRA_DIST): Added output-pstoedit.[ch].

	* configure.in (HAVE_LIBPSTOEDIT): Fix typo.
	
2002-09-26  Martin Weber <martweb@gmx.net>

	* vector.c: Now also works with C compilers that do not define true and false in the
	standard way,

	* pxl-outline.c: Ditto.

	* output.c: Ditto.

	* fit.c: Ditto.

	* epsilon-equal.c: Ditto.

	Message-ID: <8293.1032936123@www49.gmx.net>.

2002-09-25  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: use pstoedit.m4 instead of pkg-config. 
	showed more message about pstoedit.
	
2002-09-21  Masatake YAMATO  <yamato@redhat.com>
